--- a/app/css/style.css
+++ b/app/css/style.css
@@ -244,10 +244,10 @@ body {
   flex-direction: row;
   align-items: center;
   margin-bottom: 25px;
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .container .box .head h2 {
-  font-size: 2.5em;
+  font-size: 2.75em;
 }
 .container .box .head a.button-option {
   text-decoration: none;
@@ -256,7 +256,7 @@ body {
   border-radius: 10px;
   margin-left: 10px;
   color: #AAAAAA;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 .container .box .head a.button-option.first-right {
   margin-left: auto;
@@ -269,8 +269,8 @@ body {
   flex-direction: row;
   align-items: center;
   margin-bottom: 25px;
-  font-family: 'maledpan';
-  font-size: 1.4em;
+  font-family: sans-serif;
+  font-size: 1.2em;
 }
 .container .box .filter a.filter-item {
   text-decoration: none;
@@ -307,7 +307,7 @@ body {
 .container .box .device-list a.device-card.create-button {
   background: #FFFFFF;
   border: 2px dashed #DDDDDD;
-  font-size: 1.4em;
+  font-size: 1.2em;
   align-items: center;
 }
 .container .box .device-list a.device-card.create-button i {
@@ -315,7 +315,7 @@ body {
   margin-bottom: 5px;
 }
 .container .box .device-list a.device-card.create-button p {
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .container .box .device-list a.device-card:nth-child(4n+0) {
   margin-right: 0%;
@@ -329,26 +329,26 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.4em;
+  font-size: 1.2em;
 }
 .container .box .device-list a.device-card .temp {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 2.5em;
+  font-size: 2.75em;
   font-weight: bold;
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .container .box .device-list a.device-card .name {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 1.4em;
+  font-size: 1.2em;
   margin-bottom: 5px;
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .container .box .device-list a.device-card .desc {
-  font-size: 0.8em;
+  font-size: 0.9em;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -402,136 +402,101 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-weight: bold;
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .container .box .device-list a.link .counter {
-  font-size: 0.8em;
+  font-size: 0.9em;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 .login {
-  width: 100%;
+  width: 24%;
+  margin: 0 38%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
-  font-family: 'maledpan';
 }
-.login div {
-  width: 28%;
-  margin: 0 36%;
-  text-align: center;
+.login.logout {
+  font-size: 1.2em;
 }
-.login div.logout {
-  font-size: 1.4em;
-}
-.login div.logout i {
+.login.logout i {
   margin-right: 10px;
 }
-.login div .logo {
-  width: 30%;
-  margin: 0 35%;
+.login .logo {
+  width: 34%;
+  margin: 0 33%;
   margin-bottom: 5%;
   float: left;
   display: block;
 }
-.login div .logo img {
+.login .logo img {
   width: 100%;
   float: left;
   display: block;
 }
-.login div h1 {
-  width: 100%;
-  float: left;
-  display: block;
-  font-size: 2.5em;
-}
-.login div h1 a {
-  text-decoration: none;
-  color: #000000;
-}
-.login div p {
-  width: 100%;
-  float: left;
-  display: block;
-  color: #111111;
-  font-size: 1.4em;
-}
-.login div .input-text {
+.login .input-text {
   width: 100%;
   float: left;
   display: block;
   font-size: 1.2em;
-  border: 0px;
-  padding: 5%;
+  padding: 18px;
   background: #EEEEEE;
   color: #333333;
   margin: 0%;
   margin-bottom: 5%;
   border-radius: 5px;
-  border: 2px solid #DDDDDD;
   box-sizing: border-box;
+  border: 2px solid #DDDDDD;
 }
-.login div .input-text:hover {
+.login .input-text:hover {
   cursor: pointer;
 }
-.login div .input-text:focus {
+.login .input-text:focus {
   border: 2px solid #2962ff;
 }
-.login div .btn {
+.login button {
   width: 100%;
   float: left;
   display: block;
-  font-size: 1.4em;
   border: 0px;
-  padding: 5%;
+  padding: 20px;
   margin: 0%;
   margin-bottom: 10%;
   border-radius: 5px;
   background: #2962ff;
   color: #ffffff;
-  font-family: 'maledpan';
   line-height: 1.2em;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
+  font-size: 1.2em;
 }
-.login div .btn i {
+.login button i {
   margin-left: 10px;
   font-size: 0.9em;
 }
-.login div .btn:hover {
+.login button:hover {
   cursor: pointer;
   background: #3581c2;
 }
-.login div .btn.-loading {
-  background: transparent;
-  color: #2962ff;
+.login button.loading {
+  background: #DDDDDD;
+  color: #999999;
+  box-shadow: none;
 }
-.login div p {
-  width: 100%;
-  float: left;
-  display: block;
-  color: #111111;
-  font-size: 1.4em;
+.login p {
+  font-size: 1.2em;
   margin-bottom: 10%;
   text-align: center;
+  color: #333333;
 }
-.login div p i {
-  margin-left: 5px;
-  font-size: 0.8em;
-}
-.login div p a {
+.login p a {
   color: #2962ff;
-  text-decoration: none;
-}
-.login div p a:hover {
-  text-decoration: underline;
 }
 .form {
   width: 40%;
@@ -540,10 +505,10 @@ body {
   flex-direction: column;
 }
 .form h2 {
-  font-size: 2.5em;
+  font-size: 2.75em;
   color: #000000;
   border-bottom: 1px solid #dddddd;
-  font-family: 'maledpan';
+  font-family: sans-serif;
   padding-bottom: 15px;
 }
 .form .form-items {
@@ -565,20 +530,20 @@ body {
   display: none;
 }
 .form .form-items .label {
-  font-size: 1.4em;
+  font-size: 1.2em;
   color: #000000;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-family: 'maledpan';
+  font-family: sans-serif;
 }
 .form .form-items .label .btn {
   text-decoration: none;
   border-radius: 5px;
   background: #2962ff;
   color: #FFFFFF;
-  font-size: 1em;
+  font-size: 0.9em;
   padding: 5px 7px;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
 }
@@ -587,8 +552,8 @@ body {
 }
 .form .form-items p {
   color: #999999;
-  font-family: 'maledpan';
-  font-size: 1.4em;
+  font-family: sans-serif;
+  font-size: 0.9em;
 }
 .form .form-items p a {
   color: #2962ff;
@@ -613,32 +578,35 @@ body {
 }
 .form .form-items .input .input-button {
   flex-grow: 1;
-  padding: 2.5%;
+  padding: 18px;
   font-size: 1.2em;
   border: 0px;
   margin: 0px;
-  background: #FAFAFA;
-  color: #000000;
+  background: #2962ff;
+  color: #FFFFFF;
   border-radius: 5px;
   resize: none;
-  border: 2px solid #DDDDDD;
   box-sizing: border-box;
   margin-left: 15px;
+}
+.form .form-items .input .input-button:hover {
+  cursor: pointer;
 }
 .form .form-items .input .input-text,
 .form .form-items .input .input-textarea {
   flex-grow: 4;
   width: 100%;
-  padding: 2.5%;
+  float: left;
+  display: block;
   font-size: 1.2em;
-  border: 0px;
-  margin: 0px;
-  background: #FAFAFA;
-  color: #000000;
+  padding: 18px;
+  background: #EEEEEE;
+  color: #333333;
+  margin: 0%;
+  margin-bottom: 5%;
   border-radius: 5px;
-  resize: none;
-  border: 2px solid #DDDDDD;
   box-sizing: border-box;
+  border: 2px solid #DDDDDD;
 }
 .form .form-items .input .input-text:focus,
 .form .form-items .input .input-textarea:focus {
@@ -796,7 +764,7 @@ body {
   margin-top: 5%;
   background: #2962ff;
   color: #FFFFFF;
-  font-family: 'maledpan';
+  font-family: sans-serif;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
 }
 .form .form-items .button.-completed {
@@ -816,8 +784,8 @@ body {
   flex-direction: column;
 }
 .device-info h1 {
-  font-size: 2.5em;
-  font-family: 'maledpan';
+  font-size: 2.75em;
+  font-family: sans-serif;
 }
 .device-info .temperature-current {
   display: flex;
@@ -827,12 +795,12 @@ body {
   padding: 3% 0;
 }
 .device-info .temperature-current h3 {
-  font-family: 'maledpan';
-  font-size: 7.5em;
+  font-family: sans-serif;
+  font-size: 8.25em;
   line-height: 1.2em;
 }
 .device-info .temperature-current p {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .device-info .temperature-stat {
   display: flex;
@@ -846,12 +814,12 @@ body {
   padding: 1%;
 }
 .device-info .temperature-stat .box h3 {
-  font-family: 'maledpan';
-  font-size: 2.5em;
+  font-family: sans-serif;
+  font-size: 2.75em;
   line-height: 1.2em;
 }
 .device-info .temperature-stat .box p {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .device-info .temperature-stat .box.-highest .v {
   color: #111111;
@@ -866,7 +834,7 @@ body {
   color: #e74c3c;
 }
 .device-info .info {
-  font-size: 0.8em;
+  font-size: 0.9em;
   display: flex;
   flex-direction: row;
 }
@@ -905,8 +873,8 @@ body {
   flex-direction: row;
   align-items: center;
   padding: 10px 15px;
-  font-size: 1.4em;
-  font-family: 'maledpan';
+  font-size: 1.2em;
+  font-family: sans-serif;
   border-radius: 5px;
 }
 .device-history .history .logitems:nth-child(odd) {
@@ -970,8 +938,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-family: 'maledpan';
-  font-size: 1.4em;
+  font-family: sans-serif;
+  font-size: 0.9em;
 }
 .footer i {
   margin-right: 10px;
@@ -1078,8 +1046,8 @@ body {
   display: flex;
   background: #ff9800;
   color: #4c2d00;
-  font-family: 'maledpan';
-  font-size: 1.4em;
+  font-family: sans-serif;
+  font-size: 1.2em;
   justify-content: center;
   align-items: center;
   z-index: 9999;
