--- a/app/less/config.less
+++ b/app/less/config.less
@@ -10,7 +10,7 @@
 }
 
 @FontStylePrimary   : sans-serif;
-@font_family_topic  : 'maledpan';
+@font_family_topic  : sans-serif;
 
 // http://www.color-hex.com/color/21ce99
 @primary_color      :#2962FF; // Active Color
